; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/test/unit/extr_prng.c_test_prng_range_u64.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/test/unit/extr_prng.c_test_prng_range_u64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"Out of range\00", align 1
@MAX_RANGE = common dso_local global i32 0, align 4
@NREPS = common dso_local global i32 0, align 4
@RANGE_STEP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_prng_range_u64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_prng_range_u64() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 2, i32* %1, align 4
  br label %5

5:                                                ; preds = %23, %0
  %6 = load i32, i32* %1, align 4
  %7 = icmp slt i32 %6, 10000000
  br i1 %7, label %8, label %26

8:                                                ; preds = %5
  %9 = load i32, i32* %1, align 4
  store i32 %9, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %10

10:                                               ; preds = %19, %8
  %11 = load i32, i32* %3, align 4
  %12 = icmp ult i32 %11, 10
  br i1 %12, label %13, label %22

13:                                               ; preds = %10
  %14 = load i32, i32* %1, align 4
  %15 = call i32 @prng_range_u64(i32* %2, i32 %14)
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %1, align 4
  %18 = call i32 @assert_u64_lt(i32 %16, i32 %17, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %19

19:                                               ; preds = %13
  %20 = load i32, i32* %3, align 4
  %21 = add i32 %20, 1
  store i32 %21, i32* %3, align 4
  br label %10

22:                                               ; preds = %10
  br label %23

23:                                               ; preds = %22
  %24 = load i32, i32* %1, align 4
  %25 = add nsw i32 %24, 97
  store i32 %25, i32* %1, align 4
  br label %5

26:                                               ; preds = %5
  ret void
}

declare dso_local i32 @prng_range_u64(i32*, i32) #1

declare dso_local i32 @assert_u64_lt(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
